--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <div id="backdrop-hook"></div>
+
+    <div id="modal-hook"></div>
+    <div id="sidenav-hook"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
