--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/assets/svg/new_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-C9SEMWD92E"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-C9SEMWD92E");
+  </script>
+
   <body>
     <div id="backdrop-hook"></div>
 
