--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Pixel Insight" />
+    <meta property="og:image" content="https://i.imgur.com/LOFe11P.png" />
+    <meta property="og:title" content="Pixel Insight" />
+    <meta
+      name="description"
+      content="Pixel Insight: Where Creativity Meets Technology. We specialize in web and mobile app development, design, and digital marketing. Explore our digital solutions that make a difference."
+    />
+
+    <meta property="og:url" content="https://pixel-insight.com" />
+    <meta property="og:type" content="website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="https://i.imgur.com/LOFe11P.png" />
+    <meta name="twitter:site" content="@Pixel-Insight" />
+    <meta name="twitter:title" content="Pixel Insight" />
+    <meta
+      name="twitter:description"
+      content="Pixel Insight: Where Creativity Meets Technology. We specialize in web and mobile app development, design, and digital marketing. Explore our digital solutions that make a difference."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/LOFe11P.png" />
+    <title>Pixel Insight</title>
     <link rel="icon" type="image/svg+xml" href="/assets/svg/pforpixel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Tag Manager -->
