--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
     <link rel="icon" type="image/svg+xml" href="/assets/svg/pforpixel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google Tag Manager -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11288033626"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-11288033626");
+    </script>
+    <!-- Google tag (gtag.js) -->
+
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
