--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="Pixel Insight" />
-    <meta property="og:image" content="https://i.imgur.com/LOFe11P.png" />
+    <meta property="og:image" content="https://i.imgur.com/Owid3YP.png" />
     <meta property="og:title" content="Pixel Insight" />
     <meta
       name="description"
@@ -20,7 +20,7 @@
       name="twitter:description"
       content="Pixel Insight: Where Creativity Meets Technology. We specialize in web and mobile app development, design, and digital marketing. Explore our digital solutions that make a difference."
     />
-    <meta name="twitter:image" content="https://i.imgur.com/LOFe11P.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/Owid3YP.png" />
     <title>Pixel Insight</title>
     <link rel="icon" type="image/svg+xml" href="/assets/svg/pforpixel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
