--- a/index.html
+++ b/index.html
@@ -24,20 +24,15 @@
     <title>Pixel Insight</title>
     <link rel="icon" type="image/svg+xml" href="/assets/svg/pforpixel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Tag Manager -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11288033626"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "AW-11288033626");
+    >
+      if (window.location.pathname === '/quote-success') { window.dataLayer =
+      window.dataLayer || []; function gtag() { dataLayer.push(arguments); }
+      gtag("js", new Date()); gtag("config", "AW-11288033626"); }
     </script>
+
     <!-- Google tag (gtag.js) -->
 
     <script>
