--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     <title>Pixel Insight</title>
     <link rel="icon" type="image/svg+xml" href="/assets/svg/pforpixel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=AW-11288033626"
     >
       if (window.location.pathname === '/quote-success') { window.dataLayer =
       window.dataLayer || []; function gtag() { dataLayer.push(arguments); }
       gtag("js", new Date()); gtag("config", "AW-11288033626"); }
-    </script> -->
+    </script>
 
     <!-- Google tag (gtag.js) -->
 
-    <!-- <script>
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -46,7 +46,7 @@
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-K7FKKS2B");
-    </script> -->
+    </script>
     <!-- End Google Tag Manager -->
     <!-- Meta Pixel Code -->
     <script>
@@ -102,14 +102,14 @@
         src="https://www.facebook.com/tr?id=299644969713670&ev=PageView&noscript=1"
     /></noscript>
     <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript
+    <noscript
       ><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-K7FKKS2B"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript> -->
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="backdrop-hook"></div>
 
